<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_connection_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_toLeftOf="@+id/img_disconnect_connect"
                android:text="@string/disconnect"
                android:textColor="@color/dot_dark_screen3"
                android:layout_marginRight="@dimen/dp16"
                android:textStyle="bold"
                tools:ignore="RtlCompat,RtlHardcoded" />
            <ImageView
                android:id="@+id/img_disconnect_connect"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/disconnect"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@color/textview_background"
        android:scrollbars="vertical"
        android:textColor="@color/red" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonFullData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSend"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/fulldata"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/MaterialComponentsAppTheme"
        app:backgroundTint="@color/dot_dark_screen3"
        app:cornerRadius="10dp"
        app:rippleColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints,RtlHardcoded" />


    <android.support.design.button.MaterialButton
        android:id="@+id/buttonPreviousRead"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonClear"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/previous_read"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/MaterialComponentsAppTheme"
        app:backgroundTint="@color/dot_dark_screen3"
        app:cornerRadius="10dp"
        app:rippleColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonSend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/present_read"

        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/MaterialComponentsAppTheme"
        app:backgroundTint="@color/dot_dark_screen3"
        app:cornerRadius="10dp"
        app:rippleColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonClear"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSend"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/buttonClear"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/MaterialComponentsAppTheme"
        app:backgroundTint="@color/dot_dark_screen3"
        app:cornerRadius="10dp"
        app:rippleColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlHardcoded" />
</RelativeLayout>
